@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2974 2004/05/22 13:11:45 druzus Exp $
+ * $Id: ChangeLog,v 1.2975 2004/05/22 15:38:27 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-05-23 05:10 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
+  * source/pp/ppcore.c
+    ! Fixed a bug in command substitution (wrong memory was being accessed).
 
 2004-05-22 19:35 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
   * include/hbdefs.h
